IF(HDF5_FOUND)
	ADD_DEFINITIONS(-DHDF5_FOUND)
ELSE(HDF5_FOUND)
	 message(WARNING "Compiling without HDF5. No hdf5-input will be possible")
ENDIF(HDF5_FOUND)

IF(CMAKE_COMPILER_IS_GNUCXX)
	ADD_EXECUTABLE(storm EXCLUDE_FROM_ALL storm.cpp program_options_getopt.cpp)
ELSE(CMAKE_COMPILER_IS_GNUCXX)
	ADD_DEFINITIONS(-DEMULATE_GETOPT)
	ADD_EXECUTABLE(storm EXCLUDE_FROM_ALL storm.cpp getoptMSVC.c program_options_getopt.cpp)
ENDIF(CMAKE_COMPILER_IS_GNUCXX)

ADD_DEPENDENCIES(experiments storm)
ADD_DEFINITIONS(-DPROGRAM_OPTIONS_GETOPT)

TARGET_LINK_LIBRARIES(storm vigraimpex ${FFTW3_LIBRARIES})
INCLUDE_DIRECTORIES (${FFTW3_INCLUDE_DIR})

ADD_SUBDIRECTORY(test)
