FIND_PACKAGE(Boost COMPONENTS program_options)

IF(HDF5_FOUND)
	ADD_DEFINITIONS(-DHDF5_FOUND)
ENDIF(HDF5_FOUND)

IF(Boost_PROGRAM_OPTIONS_FOUND)

	ADD_EXECUTABLE(stormInt EXCLUDE_FROM_ALL stormI.cpp)
	ADD_DEPENDENCIES(experiments stormInt)
	ADD_DEFINITIONS(-DPROGRAM_OPTIONS_BOOST)

	# use static linking
	set(Boost_USE_STATIC_LIBS   ON)
	# or dynamic linking
	#ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)

	TARGET_LINK_LIBRARIES(stormInt vigraimpex ${FFTW3_LIBRARIES}
	${Boost_PROGRAM_OPTIONS_LIBRARY})
	INCLUDE_DIRECTORIES (${FFTW3_INCLUDE_DIR} ${Boost_INCLUDE_DIR})
ELSE(Boost_PROGRAM_OPTIONS_FOUND)
	ADD_EXECUTABLE(stormInt EXCLUDE_FROM_ALL stormI.cpp program_options_getopt.cpp)
	ADD_DEPENDENCIES(experiments stormInt)
	ADD_DEFINITIONS(-DPROGRAM_OPTIONS_GETOPT)

	TARGET_LINK_LIBRARIES(stormInt vigraimpex ${FFTW3_LIBRARIES})
	INCLUDE_DIRECTORIES (${FFTW3_INCLUDE_DIR})


ENDIF(Boost_PROGRAM_OPTIONS_FOUND)
