ADD_EXECUTABLE(sif2hdf5 EXCLUDE_FROM_ALL sif2hdf5.cpp)
ADD_EXECUTABLE(sif2tiff EXCLUDE_FROM_ALL sif2tiff.cpp)
ADD_EXECUTABLE(hdf52tiff EXCLUDE_FROM_ALL hdf52tiff.cpp)
ADD_EXECUTABLE(tiff2hdf5 EXCLUDE_FROM_ALL tiff2hdf5.cpp)
ADD_DEPENDENCIES(experiments sif2hdf5 sif2tiff hdf52tiff tiff2hdf5)
TARGET_LINK_LIBRARIES(sif2hdf5 vigraimpex)
TARGET_LINK_LIBRARIES(sif2tiff vigraimpex)
TARGET_LINK_LIBRARIES(hdf52tiff vigraimpex)
TARGET_LINK_LIBRARIES(tiff2hdf5 vigraimpex)


IF(HDF5_FOUND)
	ADD_DEFINITIONS(-DHDF5_FOUND)
ELSE(HDF5_FOUND)
	message(WARNING "Compiling without HDF5. No hdf5-input will be possible")
ENDIF(HDF5_FOUND)

ADD_EXECUTABLE(conv_3d convert.cpp)
INCLUDE_DIRECTORIES (../storm)
TARGET_LINK_LIBRARIES(conv_3d vigraimpex)
